compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.fir.kt
// RUN_PIPELINE_TILL: SOURCE
// LANGUAGE: -DataObjects
<!WRONG_MODIFIER_TARGET!>data<!> object Object
